opam-version: "2.0"
maintainer:   ["thomas@gazagnaire.org"]
authors:      ["Thomas Gazagnaire"  "Hannes Mehnert"]
homepage:     "https://github.com/mirage/cmdliner-stdlib"
bug-reports:  "https://github.com/mirage/cmdliner-stdlib/issues/"
dev-repo:     "git+https://github.com/mirage/cmdliner-stdlib.git"
license:      "ISC"
tags:         ["org:mirage"]
doc:          "https://mirage.github.io/cmdliner-stdlib/"

build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.9.0"}
  "cmdliner" {>= "1.0.0"}
]
synopsis: "A collection of cmdliner terms to control OCaml runtime parameters"
description: """
Cmdliner-stdlib is a package that provides a collection of cmdliner terms
to control the OCaml runtime parameters. This is typically done with environment
variables, but there are situations where such an environment is not accessible,
like in MirageOS. This package enables the configuration and manipulation of
runtime parameters in these contexts, improving the flexibility of applications
built on these platforms.
"""
